about section content changed, section colors fixed on mobile

--- a/style.sass
+++ b/style.sass
@@ -1,7 +1,5 @@
 body
-
   font-family: 'Abel', sans-serif
-  //color: #f5f5f4
 
 section
   min-width: 304px
@@ -9,69 +7,81 @@ section
 
 hr
   border-top: 2px dashed #000
-  //border-bottom: 3px dashed #fff
   margin: 0
 
 .hero
-  transition: background 2s ease-out
-  &:hover
-    background: #F0F0F0
+  background: #F0F0F0
   img
     padding: 5px
     border: 2px dashed #000
     border-radius: 50%
-    //position: relative
-    //padding: 7px
-    //&:after
-//      content: " "
-//      display: block
-//      position: absolute
-//      top: 0
-//      left: 0
-//      width: 250px
-//      height: 250px
-//      border-radius: 50%
-//      padding: 5px
-//      border: 2px dashed #000
-//      &:hover
-//        animation: spin 2s linear infinite
-//@keyframes spin
-//    0%
-//      transform: rotate(0deg)
-//    100%
-//      transform: rotate(360deg)
 
 .about
-  transition: background 2s ease-out
-  &:hover
-    background: #C3CED4
+  background: #D4AF37
 
 .projects
-  transition: background 2s ease-out
-  &:hover
-    background: #D4AF37
-  .card
-    img
-      opacity: 0.4
-      transition: opacity 2s ease-out
-    &:hover
-      img
-        opacity: 1
+  background: #C3CED4
+  a
+    text-decoration: none
+    color: #000
 
 .experience
-  transition: background 2s ease-out
+  background: #e2e88f
   table
-    //width: 60%
-    //font-size: 2rem
     tr
       border-top: 1px solid black
-  &:hover
-    background: #e2e88f
-
 
 footer
-  transition: color 1s linear, background 2s ease-out
-  &:hover
-    background: #B6A78E
-    color: #F0F0F0
+  background: #B6A78E
+  color: #F0F0F0
 
+@media (min-width: 768px)
+  .hero
+    background: #fff
+    transition: background 2s ease-out
+    &:hover
+      background: #F0F0F0
+    img
+      padding: 5px
+      border: 2px dashed #000
+      border-radius: 50%
+
+  .about
+    background: #fff
+    transition: background 2s ease-out
+    &:hover
+      background: #D4AF37
+
+  .projects
+    background: #fff
+    transition: background 2s ease-out
+    a
+      text-decoration: none
+      color: #000
+    &:hover
+      background: #C3CED4
+    .card
+      img
+        opacity: 0.4
+        transition: opacity 2s ease-out
+      &:hover
+        img
+          opacity: 1
+
+  .experience
+    background: #fff
+    transition: background 2s ease-out
+    table
+      tr
+        border-top: 1px solid black
+    &:hover
+      background: #e2e88f
+
+
+  footer
+    background: #fff
+    transition: color 1s linear, background 2s ease-out
+    color: #000
+    &:hover
+      background: #B6A78E
+      color: #F0F0F0
